// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InactiveNotificationModal renders for a notification with multiple current or past runs 1`] = `
Array [
  <div
    className="c-modal"
  >
    <div
      className="m-inactive-notification-modal__close-button"
    >
      <button
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-notification__title"
    >
      OTHER
       NOTIFICATION
    </div>
    <div
      className="m-inactive-notification-modal__body"
    >
      Runs 111, 222 are not currently active in Skate. This notification may no longer be relevant.
    </div>
  </div>,
  <div
    className="c-modal-overlay"
  />,
]
`;

exports[`InactiveNotificationModal renders for a notification with multiple upcoming runs 1`] = `
Array [
  <div
    className="c-modal"
  >
    <div
      className="m-inactive-notification-modal__close-button"
    >
      <button
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-notification__title"
    >
      OTHER
       NOTIFICATION
    </div>
    <div
      className="m-inactive-notification-modal__body"
    >
      Runs 111, 222 are upcoming and not yet active in Skate. Please check back later to see details for these runs.
    </div>
  </div>,
  <div
    className="c-modal-overlay"
  />,
]
`;

exports[`InactiveNotificationModal renders for a notification with no runs 1`] = `
Array [
  <div
    className="c-modal"
  >
    <div
      className="m-inactive-notification-modal__close-button"
    >
      <button
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-notification__title"
    >
      OTHER
       NOTIFICATION
    </div>
    <div
      className="m-inactive-notification-modal__body"
    >
      No runs associated with this notification are currently active in Skate. This notification may no longer be relevant.
    </div>
  </div>,
  <div
    className="c-modal-overlay"
  />,
]
`;

exports[`InactiveNotificationModal renders for a notification with one current or past run 1`] = `
Array [
  <div
    className="c-modal"
  >
    <div
      className="m-inactive-notification-modal__close-button"
    >
      <button
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-notification__title"
    >
      OTHER
       NOTIFICATION
    </div>
    <div
      className="m-inactive-notification-modal__body"
    >
      Run 111 is not currently active in Skate. This notification may no longer be relevant.
    </div>
  </div>,
  <div
    className="c-modal-overlay"
  />,
]
`;

exports[`InactiveNotificationModal renders for a notification with one upcoming run 1`] = `
Array [
  <div
    className="c-modal"
  >
    <div
      className="m-inactive-notification-modal__close-button"
    >
      <button
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-notification__title"
    >
      OTHER
       NOTIFICATION
    </div>
    <div
      className="m-inactive-notification-modal__body"
    >
      Run 111 is upcoming and not yet active in Skate. Please check back later to see details for this run.
    </div>
  </div>,
  <div
    className="c-modal-overlay"
  />,
]
`;
